fix: responsiveness on firefox

--- a/packages/component-library/draft/Kaizen/GuidanceBlock/GuidanceBlock.scss
+++ b/packages/component-library/draft/Kaizen/GuidanceBlock/GuidanceBlock.scss
@@ -33,16 +33,16 @@ $ca-banner-collapse-height-delayed: margin-top $ca-duration-fast
 
 .iconWrapper {
   padding: 0 ($ca-grid / 2);
-  flex: 0 0 auto;
+  flex: 1 0 auto;
 }
 
 .descriptionContainer {
-  flex: 1 0 auto;
+  flex: 0 1 auto;
 }
 
 .buttonContainer {
   padding-left: $ca-grid;
-  flex: 0 0 auto;
+  flex: 1 0 auto;
 }
 
 .hidden {
